refactor for release

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     ],
     "require": {
 
+    },
+    "autoload": {
+        "psr-4": {
+            "Slender\\Base\\": "src"
+        }
     }
 }
