--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         }
     ],
     "require": {
-
+        "slender/service-manager": "0.0.1",
+        "slender/route-manager": "0.0.1",
+        "slender/twig": "0.1.2",
+        "slender/asset-exposer": "0.1.0"
     },
     "autoload": {
         "psr-4": {
